--- a/market-org/public/index.html
+++ b/market-org/public/index.html
@@ -5,6 +5,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png" />
+  <link
+  rel="stylesheet"
+  type="text/css"
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <!--
